# trust-lesson

./: .env.example  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  README.md  Trust_Lesson_API.postman_collection.json  alembic.ini  compose.yaml  main-dev.tf  variables-dev.tf
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 04f628b988a7_change_primary_key_in_user_identity_.py  0b15f9e0a018_add_effective_duration_column.py  1b70b69c9d41_create_validation_table.py  25176868d0a9_change_effective_start_date_type.py  39faa71875fa_rename_validated_value_column_on_lesson_.py  3a4c4c1e8bfe_create_error_fields_to_validation_models.py  4802c26b6da4_change_userrole_enum.py  5fc86b2c9dde_turn_user_unique_by_email.py  7854bebd271c_add_user_identity_table.py  7f14effd8396_change_lesson_user_primary_key.py  8e836ae377c4_add_title_column_on_lesson.py  bc81aa7eabb3_initial_schema.py  d13f31069b13_create_foreign_key_on_validation_table.py  d6294ab12aba_add_identity_validation_table.py
api/: .flake8  Dockerfile  Dockerfile-dev  Dockerfile-infra  README.md  build-pkg.sh  create_zip.sh  function.json  function_app.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
api/api/: __init__.py  app.py  auth.py  aws.py  azure.py  course.py  course_term.py  crud.py  depends.py  dto.py  events.py  health.py  lesson.py  models.py  public.py  redis.py  settings.py  user.py  utils.py  validation.py  views.py
api/api/azure/: functions.py  storage.py
api/api/cli/: cli.py  create_user.py
api/api/dto/: __init__.py  auth.py  course.py  identity.py  lesson.py  public.py  user.py  validation.py
api/api/jobs/: update_status_lesson.py  validate_images.py
api/api/middleware/: __init__.py  check_auth.py
api/api/models/: __init__.py  base.py  course.py  lesson.py  lesson_user.py  term_user.py  user.py  validation.py
api/api/routes/: __init__.py  auth.py  course.py  course_term.py  health.py  identity.py  lesson.py  user.py  validation.py
api/api/routes/validation/: identity.py  lesson.py
api/tests/: conftest.py  factories.py  test_auth.py  test_course.py  test_course_term.py  test_identity.py  test_lesson.py  test_list_lesson.py  test_models.py  test_start_lesson.py  test_stop_lesson.py  test_upload_lessons.py  test_users.py  test_utils.py  test_validation.py  utils.py
api/tests/dto/: test_validation.py
api/tests/jobs/: test_update_status_lesson.py  test_validate_images.py
api/tests/mock/: lessons1.xlsx
assets/: lessons.xlsx
functions/: .funcignore  Dockerfile-azurite  Dockerfile-dev  create-zip.sh  create_containers.py  deploy-func.sh  function_app.py  local.settings.json  pyproject.toml  requirements.txt  testing.env
functions/functions/: lesson.py  lessons_parser.py  settings.py  validator.py
functions/tests/: conftest.py  test_lesson.py  test_lessons_parser.py
functions/tests/mock/: lessons-invalid-date.xlsx  lessons-no-lesson-header.xlsx  lessons-no-name.xlsx  lessons-no-number.xlsx  lessons1.xlsx  lessons2.xlsx
infra/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
infra/modules/api/: main.tf  outputs.tf  variables.tf
infra/modules/cache/: main.tf  outputs.tf  variables.tf
infra/modules/cognitive/: main.tf  outputs.tf
infra/modules/database/: main.tf  outputs.tf  variables.tf
infra/modules/functions/: main.tf  outputs.tf  variables.tf
infra/modules/logging/: main.tf  outputs.tf
infra/modules/schedule/: main.tf  outputs.tf  variables.tf
infra/modules/storage/: main.tf  outputs.tf  variables.tf
