[tool.poetry]
name = "functions"
version = "0.1.0"
description = ""
authors = ["raulpy271 <raulrufino0@gmail.com>"]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.group.dev]
optional = true

[tool.poetry.dependencies]
python = "^3.12"
api = { path = "../api/", develop = false }
azure-functions= "^1.21.3"
azure-ai-vision-imageanalysis = "^1.0.0"
azure-storage-blob = "^12.24.1"
azure-identity = "^1.19.0"
pandas = "^2.3.1"
openpyxl = "^3.1.5"
sqlmodel = "^0.0.24"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
mimesis = "^18.0.0"

