[project]
name = "functions"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = "MIT"
authors = [
    { name = "raulpy271", email = "raulrufino0@gmail.com" },
]

dependencies = [
    "api",
    "azure-functions (>=1.21.3,<2.0.0)",
    "azure-ai-vision-imageanalysis (>=1.0.0,<2.0.0)",
    "azure-storage-blob (>=12.24.1,<12.27.0)",
    "azure-identity (>=1.19.0,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "sqlmodel (>=0.0.24,<0.1.0)",
    "azure-ai-documentintelligence (>=1.0.2,<2.0.0)"
]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.dependencies]
api = { path = "../api/", develop = false }

[dependency-groups]
dev = [
    "pytest (>=8.3.4,<9.0.0)",
    "mimesis (>=18.0.0,<19.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
]

[tool.poetry.group.dev]
optional = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
